--- a/main.ipynb
+++ b/main.ipynb
@@ -406,7 +406,17 @@
       "epoch: 0, time: 35.45, loss_dnn:5.6148, loss_physics: 0.03009999915957451, test_loss: 1.5334891080856323\n"
      ]
     },
-    
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[5], line 96\u001B[0m\n\u001B[0;32m     94\u001B[0m y, pred_physics \u001B[38;5;241m=\u001B[39m model_PITN(inp_comb_all, \u001B[38;5;28;01mTrue\u001B[39;00m, \u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[0;32m     95\u001B[0m physics_loss_ini \u001B[38;5;241m=\u001B[39m pred_physics \u001B[38;5;241m-\u001B[39m y[\u001B[38;5;241m1\u001B[39m:, \u001B[38;5;241m0\u001B[39m]\n\u001B[1;32m---> 96\u001B[0m physics_loss \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mmean(torch\u001B[38;5;241m.\u001B[39msquare(\u001B[43mphysics_loss_ini\u001B[49m\u001B[43m[\u001B[49m\u001B[43mix_all\u001B[49m\u001B[43m[\u001B[49m\u001B[43m:\u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mview\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m]\u001B[49m))\n\u001B[0;32m     98\u001B[0m \u001B[38;5;66;03m# physics_loss = K.mean(K.square(tf.gather_nd(physics_loss_ini, indices=np.array(ix_all[:-1])[:, None])))\u001B[39;00m\n\u001B[0;32m     99\u001B[0m loss_total \u001B[38;5;241m=\u001B[39m loss_dnn \u001B[38;5;241m+\u001B[39m physics_loss \u001B[38;5;241m*\u001B[39m beta\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
    ],
    "source": [
     "configs = Configs()\n",
