--- a/main.ipynb
+++ b/main.ipynb
@@ -389,35 +389,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7543d519-1fd8-47c3-bee8-2fd9d2afe632",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-07-10T08:51:30.646961100Z",
-     "start_time": "2024-07-10T08:49:50.113157100Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PITN model training started\n",
-      "epoch: 0, time: 35.45, loss_dnn:5.6148, loss_physics: 0.03009999915957451, test_loss: 1.5334891080856323\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[5], line 96\u001B[0m\n\u001B[0;32m     94\u001B[0m y, pred_physics \u001B[38;5;241m=\u001B[39m model_PITN(inp_comb_all, \u001B[38;5;28;01mTrue\u001B[39;00m, \u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[0;32m     95\u001B[0m physics_loss_ini \u001B[38;5;241m=\u001B[39m pred_physics \u001B[38;5;241m-\u001B[39m y[\u001B[38;5;241m1\u001B[39m:, \u001B[38;5;241m0\u001B[39m]\n\u001B[1;32m---> 96\u001B[0m physics_loss \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mmean(torch\u001B[38;5;241m.\u001B[39msquare(\u001B[43mphysics_loss_ini\u001B[49m\u001B[43m[\u001B[49m\u001B[43mix_all\u001B[49m\u001B[43m[\u001B[49m\u001B[43m:\u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mview\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m]\u001B[49m))\n\u001B[0;32m     98\u001B[0m \u001B[38;5;66;03m# physics_loss = K.mean(K.square(tf.gather_nd(physics_loss_ini, indices=np.array(ix_all[:-1])[:, None])))\u001B[39;00m\n\u001B[0;32m     99\u001B[0m loss_total \u001B[38;5;241m=\u001B[39m loss_dnn \u001B[38;5;241m+\u001B[39m physics_loss \u001B[38;5;241m*\u001B[39m beta\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "configs = Configs()\n",
     "model_PITN = PITN(configs)\n",
@@ -462,6 +437,7 @@
     "    if not torch.is_tensor(train_out):\n",
     "        train_out = torch.tensor(train_out, dtype=torch.float32)\n",
     "    inp_comb, train_out = inp_comb.to(device=device), train_out.to(device=device)\n",
+    "    # model_dnn_pinn的参数意思是，输入数据，是否计算physics loss，是否使用auxiliary BN\n",
     "    output, feature_clean = model_PITN(inp_comb, False, False)\n",
     "    loss_dnn_clean = output - train_out\n",
     "    loss_dnn_clean = torch.mean(torch.square(loss_dnn_clean))\n",
@@ -570,28 +546,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "7776218f-592d-4278-9ed6-da9326f2fd66",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-07-10T08:14:01.142044400Z",
-     "start_time": "2024-07-10T08:14:01.069238Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Tensor' object has no attribute 'task_name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[28], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m#The trained model's predictions on the test dataset are computed\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m pred_out \u001B[38;5;241m=\u001B[39m \u001B[43mPITN\u001B[49m\u001B[43m(\u001B[49m\u001B[43minp_comb_test\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      4\u001B[0m \u001B[38;5;66;03m#The Pearson correlation coefficient and the Root Mean Square Error are calculated between the actual and predicted test outcomes\u001B[39;00m\n\u001B[0;32m      5\u001B[0m corr_conv \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mcorrcoef(np\u001B[38;5;241m.\u001B[39mconcatenate(test_out)[:], np\u001B[38;5;241m.\u001B[39mconcatenate(pred_out)[:])[\u001B[38;5;241m0\u001B[39m][\u001B[38;5;241m1\u001B[39m]\n",
-      "Cell \u001B[1;32mIn[21], line 44\u001B[0m, in \u001B[0;36mPITN.__init__\u001B[1;34m(self, configs)\u001B[0m\n\u001B[0;32m     42\u001B[0m \u001B[38;5;28msuper\u001B[39m(PITN, \u001B[38;5;28mself\u001B[39m)\u001B[38;5;241m.\u001B[39m\u001B[38;5;21m__init__\u001B[39m()\n\u001B[0;32m     43\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mconfigs \u001B[38;5;241m=\u001B[39m configs\n\u001B[1;32m---> 44\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtask_name \u001B[38;5;241m=\u001B[39m \u001B[43mconfigs\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtask_name\u001B[49m\n\u001B[0;32m     45\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mseq_len \u001B[38;5;241m=\u001B[39m configs\u001B[38;5;241m.\u001B[39mseq_len\n\u001B[0;32m     46\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmodel \u001B[38;5;241m=\u001B[39m nn\u001B[38;5;241m.\u001B[39mModuleList([TemporalBlock(configs) \u001B[38;5;28;01mfor\u001B[39;00m _ \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(configs\u001B[38;5;241m.\u001B[39me_layers)])\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'Tensor' object has no attribute 'task_name'"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#The trained model's predictions on the test dataset are computed\n",
     "pred_out = PITN(inp_comb_test)\n",
